--- a/SierraApps.css
+++ b/SierraApps.css
@@ -1,6 +1,6 @@
 #Body1 {
     height: 100%;
     width: 100%;
-    background-image: url(SierraApp%20background%20coming%20soon....png);
+    background-image: url(sierraApps.png);
     background-size: cover;
 }
