--- a/SierraApps.css
+++ b/SierraApps.css
@@ -1,5 +1,5 @@
 #header1{
-    width: 100;
+    width: 100%;
     height: 300px;
     background-size: cover;
     background-image: url(apps-for-apple.gif)
