--- a/SierraApps.css
+++ b/SierraApps.css
@@ -1,6 +1,6 @@
 #header1{
     width: 100%;
-    height: 300px;
+    height: 20%;
     background-size: cover;
     background-image: url(apps-for-apple.gif)
 }
