--- a/SierraApps.css
+++ b/SierraApps.css
@@ -1,4 +1,5 @@
 #header1{
+    position: relative;
     width: 100%;
     height: 20%;
     background-size: cover;
@@ -6,6 +7,7 @@
 }
 
 #Body1 {
+    position: relative;
     height: 100%;
     width: 100%;
     background-image: url(sierraApps.png);
